<?xml version="1.0" encoding="utf-8"?>
<!-- - - Copyright 2011 Birkett Enterprise Ltd - - Licensed under the Apache 
	License, Version 2.0 (the "License"); - you may not use this file except 
	in compliance with the License. - You may obtain a copy of the License at 
	- - http://www.apache.org/licenses/LICENSE-2.0 - - Unless required by applicable 
	law or agreed to in writing, software - distributed under the License is 
	distributed on an "AS IS" BASIS, - WITHOUT WARRANTIES OR CONDITIONS OF ANY 
	KIND, either express or implied. - See the License for the specific language 
	governing permissions and - limitations under the License. - -->

<resources>
	<string name="udpate_sucess">Update success!</string>
	<string name="app_name">Phonelocator</string>
	<string name="sign_in_dialog_title">One time sign in</string>
	<string name="user_name">User name</string>
	<string name="password">Password</string>
	<string name="sign_up">Sign up</string>
	<string name="sign_in">Sign in</string>
	<string name="no_account">Don\'t have an account?</string>
	<string name="sign_up_url">http://periodic.phonelocator.mobi/signup</string>
	
	<string name="updates_tab">Updates</string>
	<string name="settings_tab">Settings</string>

	<string name="periodic_updates">Enable updates</string>
	<string name="periodic_updates_summary">Send location to server periodically</string>

	<string name="update_frequency">Update Frequency</string>
	<string name="update_frequency_summary">How often updates are sent</string>

	<string name="connection_failed">Connection failed</string>
	<string name="retry">Retry</string>
	<string name="quit">Quit</string>

	<string name="registering_progress_dialog_message">Registering...</string>

	<string name="no_updates_sent_message">Congratulations on installing Phonelocator!\n\nTo enable updates tap the settings tab and then tap enable updates.</string>


	<string name="update_timestamp_description">Update at: </string>
	<string name="location_timestamp_description">Location acquired: </string>
	<string name="location_provider_description">Location provider: </string>
	<string name="error_description">Error: </string>

	<string name="error_io_exception">Could not connect to server</string>
	<string name="error_corrupt_stream">Corrupt stream</string>
	<string name="error_authentication_failed">Authentication failed</string>
	<string name="error_location_poll_failed">Could not determine location</string>
	
	<string name="gps_timeout">GPS timeout</string>
	<string name="gps_timeout_summary">How long to wait for a GPS lock</string>
	
	<string name="gps_enabled">GPS enabled</string>
	<string name="gps_enabled_summary">Requires more battery and a clear view of the sky. Will fall back to network location if GPS not available.</string>		

</resources>
